--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
-output: github_document
+output:
+  github_document:
+    html_preview: false
 ---
 
 ```{r setup, include=FALSE}
@@ -7,7 +9,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # Data Analysis of COVID-19's Impact on Work
-#### **Team Lead: Bhargav Yellepeddi**<br>Associates: Neel Rajan, Amaya Bayoumi, Ananya Ramji
+#### **Team Lead: Bhargav Yellepeddi**<br>Associates: Amaya Bayoumi, Ananya Ramji, Neel Rajan
 
 ## Introduction
 
