Reorganize repo structure (rmd/ and reports/)

--- a/rmd/README.Rmd
+++ b/rmd/README.Rmd
@@ -60,7 +60,7 @@ library(dplyr)
 library(tidyr)
 
 # Read the CSV file
-data <- read_csv("data/covid_impact_on_work.csv")
+data <- read_csv("../data/covid_impact_on_work.csv")
 ```
 
 ```{r}
