--- a/rmd/README.Rmd
+++ b/rmd/README.Rmd
@@ -8,7 +8,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Data Analysis of COVID-19's Impact on Work
+# COVID Work Impact Analysis
 #### **Team Lead: Bhargav Yellepeddi**<br>Associates: Amaya Bayoumi, Ananya Ramji, Neel Rajan
 
 ## Introduction
